/*
 * $Id: ChangeLog,v 1.349 2002/08/14 22:53:41 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-08-14 15:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
    + Added <LITERAL> as a valid prefix to a <STEP>

2002-08-14 15:52 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
    + Added <LITERAL> as a valid prefix to a <TO>

2002-08-14 14:55 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     ! fixed some warnings

2002-08-13 18:14 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed hb_vmInc() hb_vmDec() hb_vmPlus() and hb_vmMinus() support for String[] plus/minus numeric.

2002-08-12 23:25 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     ! fixed seek bug when having an empty scope
     ! Memo Limit is > 64K now up to 2GB (2^31 or max(long))
     ! fixed bug in ordNumber()

2002-08-11 20:20 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed typo in hb_vmDec() which broke DATE--.

2002-08-10 22:00 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    + Added support for #un[x]command and #un[x]translate
    /* In order for the #command or #translate to be removed, it has to exactly matched with the #un* definition! */

2002-08-10 21:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/hvm.c
    ! Fixed hb_vmInc() and hb_vmDec() support of DATE++ and DATE--.

2002-08-09 14:50 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/achoice.prg
    % Fixed Bug when nRight parameters is 79. When column 79 is used ,ie:achoice(00,00,24,79,aPesquisa), browsing an
     large array back make the display slower Reported by an Brazilian user

2002-08-09 09:48 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h