@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.349 2002/08/14 22:53:41 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.350 2002/08/14 22:57:23 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,15 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-08-14 21:46 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * contrib/rdd_ads/make_b32.bat
+  * contrib/rdd_ads/makefile.bc
+    * Reverted from Harbour
+      /* Luiz, I'm amazed just how uncareful you can be, when posting to CVS! */
+
+  * source/vm/hvm.c
+    ! Minor fix to hb_vmPlus() and hb_vmMinus().
 
 2002-08-14 15:56 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/compiler/harbour.slx
